move checkdir to utils

--- a/neuron/LIF_neuron.ipynb
+++ b/neuron/LIF_neuron.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:e69f1a18a7738931b303f1677de0c6aa2a03fba77a216198019c57cf68333631"
+  "signature": "sha256:db593dce03c0080dc29053ab0462f2ad1be3a52ed4a15829f94658f50cdb8e78"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -190,10 +190,7 @@
       "rng = random.RandomState(s)\n",
       "\n",
       "FIGDIR = './figures/'\n",
-      "import os\n",
-      "def checkdir(path):\n",
-      "    if not os.path.exists(path):\n",
-      "        os.mkdir(path)\n",
+      "from utils.data import checkdir\n",
       "checkdir(FIGDIR)\n",
       "\n",
       "import multiprocessing\n",
