pull signal functions into signal utils

--- a/neuron/adaptive_neuron.ipynb
+++ b/neuron/adaptive_neuron.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:b1cddc7760fc3e02550628d1a52a41e423ead455a77bc848df6e4eb03590414c"
+  "signature": "sha256:b2165d171462543e91e848bd8fcfbfce254952eefd3f68eaa1aa3d027bbb720c"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -55,7 +55,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "An adaptive LIF neuron is a modified version of an LIF neuron (See [this notebook](http://nbviewer.ipython.org/github/fragapanagos/notebooks/blob/master/neuron/LIF_neuron.ipynb) for analysis of the LIF neuron).\n",
+      "An adaptive LIF neuron is a modified version of an LIF neuron ([here](http://nbviewer.ipython.org/github/fragapanagos/notebooks/blob/master/neuron/LIF_neuron.ipynb) is an LIF neuron analysis).\n",
       "\n",
       "Similar to the standard LIF neuron, the dynamics of an adaptive LIF neuron are like an leaky integrator but unlike the LIF neuron, the adaptive neuron also includes feedback.\n",
       "\n",
@@ -133,6 +133,29 @@
       }
      ],
      "prompt_number": 2
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "# import libraries\n",
+      "FIGDIR = './figures/'\n",
+      "from utils.data import checkdir\n",
+      "checkdir(FIGDIR)\n",
+      "\n",
+      "import numpy as np\n",
+      "s = random.seed(2)\n",
+      "rng = random.RandomState(s)\n",
+      "from utils.signal import make_poisson_spikes, filter_spikes\n",
+      "\n",
+      "import multiprocessing\n",
+      "from utils.plot import plot_continuous, plot_spike_raster, plot_histogram,\\\n",
+      "                       plot_contour, plot_scatter, match_xlims, save_close_fig"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
