make files naming consistent

--- a/neuron/LIF_neuron.ipynb
+++ b/neuron/LIF_neuron.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:36f2eb791c0aa63e5e1559386fe71a08aef4d5710d9141bcd200f0b5c7baf630"
+  "signature": "sha256:a64c543158281e65d4215cc116dc08f1ea5ab2a67ac0f489ef4f1b0673e673ce"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -123,13 +123,13 @@
       "so the firing rate for an LIF neuron with constant input will be\n",
       "\n",
       "$$\n",
-      "f = \\frac{1}{t_{ref}-\\tau\\ln\\left(\\frac{u-x_t}{u-x_0}\\right)}.\n",
+      "f = \\frac{1}{t_{ref}-\\tau\\ln\\left(\\frac{u-x_t}{u-x_0}\\right)} \\qquad u>x_t\n",
       "$$\n",
       "\n",
       "If we set $x_0=0$, we have the firing rate function typically seen in the literature,\n",
       "\n",
       "$$\n",
-      "f = \\frac{1}{t_{ref}-\\tau\\ln\\left(1-\\frac{x_t}{u}\\right)}.\n",
+      "f = \\frac{1}{t_{ref}-\\tau\\ln\\left(1-\\frac{x_t}{u}\\right)} \\qquad u>x_t\n",
       "$$\n",
       "\n",
       "As an aside, solving for $x$ in terms of $t$,\n",
