--- a/neuron/adaptive_LIF_neuron.ipynb
+++ b/neuron/adaptive_LIF_neuron.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:b2165d171462543e91e848bd8fcfbfce254952eefd3f68eaa1aa3d027bbb720c"
+  "signature": "sha256:3b402fd4b0bb258cb34d2348743f0df41769fa7434d279e091d75002698f434a"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -88,7 +88,7 @@
       "  \\begin{cases}\n",
       "    \\text{soma outputs a spike} \\\\\n",
       "    x :=0 & t_{spk}\\le t < t_{spk}+t_{ref} \\\\\n",
-      "    u_{f}\\ := u_{f}+\\delta(t_{spk})\n",
+      "    x_{f}\\ := x_{f}+\\delta(t_{spk})\n",
       "  \\end{cases}\n",
       "$$\n",
       "\n",
@@ -97,7 +97,21 @@
       " - $t_{spk}$ is the time at which $x(t)$ crosses threshold and\n",
       " - $t_{ref}$ is the refractory period\n",
       " \n",
-      "In words, when $x$ reaches the threshold $x_{t}$, we declare the neuron as having spiked, reset and hold $x$ to $0$ for a refactory period $t_{ref}$, and feed an inhibitory spike back to the adaptive feedback term."
+      "In words, when $x$ reaches the threshold $x_{t}$, we declare the neuron as having spiked, reset and hold $x$ to $0$ for a refactory period $t_{ref}$, and feed an inhibitory spike back to the adaptive feedback synapse."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "We know that the firing rate for an LIF neuron without adaptation given constant current is\n",
+      "\n",
+      "$$\n",
+      "f = \\frac{1}{t_{ref}-\\tau\\ln\\left(1-\\frac{x_t}{u_{in}}\\right)} \\qquad u_{in}>x_t\n",
+      "$$\n",
+      "\n",
+      "What will the firing rate of an adaptive neuron be?\n",
+      "\n"
      ]
     },
     {
