add adaptive iterative tuning curve

--- a/neuron/LIF_neuron.ipynb
+++ b/neuron/LIF_neuron.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:2155f30acf34291cc07a0975e05b24fa87f5842008b649f48499e40e57daa30f"
+  "signature": "sha256:89113dd034225735379086b33622039a393bd613b487b203db1edfe7decb9f37"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -193,6 +193,8 @@
       "rng = random.RandomState(s)\n",
       "from utils.signal import make_poisson_spikes, filter_spikes\n",
       "\n",
+      "from utils.neuron import th_lif_fi\n",
+      "\n",
       "import multiprocessing\n",
       "from utils.plot import plot_continuous, plot_spike_raster, plot_histogram,\\\n",
       "                       plot_contour, plot_scatter, match_xlims, save_close_fig\n",
@@ -225,18 +227,6 @@
      "collapsed": false,
      "input": [
       "# define models to simulate\n",
-      "def th_lif_fi(u, tau, tref, xt):\n",
-      "    \"\"\"Theoretical LIF tuning curve\"\"\"\n",
-      "    # handle scalars\n",
-      "    if isinstance(u, (int, float)):\n",
-      "        u = np.array([u])\n",
-      "    # handle arrays\n",
-      "    f = np.zeros(u.shape)\n",
-      "    idx = u>xt\n",
-      "    f[idx] = (tref-tau*np.log((u[idx]-xt)/(u[idx])))**(-1.)\n",
-      "    return f\n",
-      "\n",
-      "\n",
       "def th_u_xmin(lam, tau):\n",
       "    \"\"\"Theoretical steady state xmin for uniform input\"\"\"\n",
       "    ret = np.zeros(len(lam))\n",
