test relative links

--- a/neuron/adaptive_LIF_neuron.ipynb
+++ b/neuron/adaptive_LIF_neuron.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:6919dd5dfd2463707958e8e0e363774caef41662bb30f6c4f4223a64386b31b2"
+  "signature": "sha256:c9303ce8af9c2086c341f2cdfe69831a8fa9135d365ae47d623694ffccda735e"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -154,6 +154,13 @@
      "metadata": {},
      "source": [
       "Principle of operation"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "We know from the [synapse demo](../synapse/synapse_demo.ipynb) that the time course of a synapse is wholly determined by its time constant and the input firing rate. That is, the synapse value will approach the input firing rate exponentially goverened by its time constant."
      ]
     },
     {
