integrate adaptive, discuss case when tau=tauf

--- a/neuron/LIF_neuron.ipynb
+++ b/neuron/LIF_neuron.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:a7af82dc94d1b103643e677377eeb3153ffc30f087581826a2c4df60ddaac8a9"
+  "signature": "sha256:a1a4d0bcbf938e136a345ff8ab1d29569c23923808e449d88602bceb596b801e"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -91,9 +91,9 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Assuming that the input $u$ is constant, we can derive the output spike rate of an LIF neuron analytically. Our approach is to find the time it takes for the neuron to reach threshold, $t_t$, and then substituting that time into the equation describing the firing rate. The firing rate equation is\n",
+      "Assuming that the input $u$ is constant, we can derive the output spike rate of an LIF neuron analytically. Our approach is to find the time it takes for the neuron to reach threshold, $t_{spk}$, and then substituting that time into the equation describing the firing rate. The firing rate equation is\n",
       "\n",
-      "$$f=\\frac{1}{t_{ref}+t_t}$$\n",
+      "$$f=\\frac{1}{t_{ref}+t_{spk}}$$\n",
       "\n",
       "Integrating the dynamics equation, \n",
       "\n",
@@ -114,10 +114,10 @@
       "-\\tau\\ln\\left(\\frac{-x+u}{-x_0+u}\\right) &= t. \\\\\n",
       "\\end{align}\n",
       "\n",
-      "Setting $t=t_t$ when $x=x_t$, we have\n",
+      "Setting $t=t_{spk}$ when $x=x_t$, we have\n",
       "\n",
       "$$\n",
-      "-\\tau\\ln\\left(\\frac{-x_t+u}{-x_0+u}\\right) = t_t,\n",
+      "-\\tau\\ln\\left(\\frac{-x_t+u}{-x_0+u}\\right) = t_{spk},\n",
       "$$\n",
       "\n",
       "so the firing rate for an LIF neuron with constant input will be\n",
@@ -533,6 +533,76 @@
      "metadata": {},
      "source": [
       "Appendix"
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {},
+     "source": [
+      "Another LIF firing rate derivation"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "$$f=\\frac{1}{t_{ref}+t_{spk}}$$\n",
+      "\n",
+      "To find $t_{spk}$,\n",
+      "\n",
+      "\\begin{align}\n",
+      "\\tau\\dot{x} &= -x+u \\\\\n",
+      "\\dot{x} + \\frac{1}{\\tau}x &= \\frac{1}{\\tau}u \\\\\n",
+      "\\end{align}\n",
+      "\n",
+      "Set integrating factor \n",
+      "\n",
+      "\\begin{align}\n",
+      "\\gamma(t) &= e^{\\int \\frac{1}{\\tau}dt} \\\\\n",
+      " &= e^{t/\\tau} \\\\\n",
+      "\\end{align}\n",
+      "\n",
+      "where the integrating constant will be folded into the overall solution. Therefore,\n",
+      "\n",
+      "\\begin{align}\n",
+      "\\dot{x} + \\frac{1}{\\tau}x &= \\frac{1}{\\tau}u \\\\\n",
+      "\\frac{d}{dt}x + \\frac{1}{\\tau}x &= \\frac{1}{\\tau}u \\\\\n",
+      "\\gamma\\frac{d}{dt}x + \\frac{1}{\\tau}\\gamma x &= \\frac{1}{\\tau}\\gamma u \\\\\n",
+      "\\gamma\\frac{d}{dt}x + \\left(\\frac{d}{dt}\\gamma\\right) x &= \\frac{1}{\\tau}\\gamma u \\\\\n",
+      "\\frac{d}{dt}(\\gamma x) &= \\frac{1}{\\tau}\\gamma u \\\\\n",
+      "\\gamma x &= \\int\\frac{1}{\\tau}\\gamma u\\ dt \\\\\n",
+      "e^{t/\\tau} x &= \\int\\frac{1}{\\tau}e^{t/\\tau}u\\ dt \\\\\n",
+      " &= \\frac{u}{\\tau}\\int e^{t/\\tau}dt \\\\\n",
+      " &= ue^{t/\\tau} + c \\\\\n",
+      "x &= u + ce^{-t/\\tau} \\\\\n",
+      "\\end{align}\n",
+      "\n",
+      "Using the initial value $x(0)=0$,\n",
+      "\n",
+      "\\begin{align}\n",
+      "0 &= u + c \\\\\n",
+      "c &= -u \\\\\n",
+      "\\end{align}\n",
+      "\n",
+      "so\n",
+      "\n",
+      "$$x(t) = u(1-e^{-t/\\tau})$$\n",
+      "\n",
+      "When the neuron reaches threshold, $x(t_{spk})=x_t$, so\n",
+      "\n",
+      "\\begin{align}\n",
+      "x_t &= u(1-e^{-t_{spk}/\\tau}) \\\\\n",
+      "\\frac{x_t}{u} &= 1-e^{-t_{spk}/\\tau} \\\\\n",
+      "e^{-t_{spk}/\\tau} &= 1-\\frac{x_t}{u} \\\\\n",
+      "-t_{spk}/\\tau &= \\ln\\left(1-\\frac{x_t}{u}\\right) \\\\\n",
+      "t_{spk} &= -\\tau\\ln\\left(1-\\frac{x_t}{u}\\right) \\\\\n",
+      "\\end{align}\n",
+      "\n",
+      "Therefore\n",
+      "$$f=\\frac{1}{t_{ref}-\\tau\\ln\\left(1-\\frac{x_t}{u}\\right)}$$\n",
+      "\n",
+      "as before."
      ]
     },
     {
