adaptive is non solvable as polynomial

--- a/neuron/LIF_neuron.ipynb
+++ b/neuron/LIF_neuron.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:a1a4d0bcbf938e136a345ff8ab1d29569c23923808e449d88602bceb596b801e"
+  "signature": "sha256:23564601c2d11a9d55970cc5c36dce9b847e245a90db0c4a8758659d187cf2f5"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -571,9 +571,9 @@
       "\\gamma\\frac{d}{dt}x + \\frac{1}{\\tau}\\gamma x &= \\frac{1}{\\tau}\\gamma u \\\\\n",
       "\\gamma\\frac{d}{dt}x + \\left(\\frac{d}{dt}\\gamma\\right) x &= \\frac{1}{\\tau}\\gamma u \\\\\n",
       "\\frac{d}{dt}(\\gamma x) &= \\frac{1}{\\tau}\\gamma u \\\\\n",
-      "\\gamma x &= \\int\\frac{1}{\\tau}\\gamma u\\ dt \\\\\n",
-      "e^{t/\\tau} x &= \\int\\frac{1}{\\tau}e^{t/\\tau}u\\ dt \\\\\n",
-      " &= \\frac{u}{\\tau}\\int e^{t/\\tau}dt \\\\\n",
+      "\\gamma x &= \\int\\frac{1}{\\tau}\\gamma u\\ dt + c\\\\\n",
+      "e^{t/\\tau} x &= \\int\\frac{1}{\\tau}e^{t/\\tau}u\\ dt + c\\\\\n",
+      " &= \\frac{u}{\\tau}\\int e^{t/\\tau}dt + c\\\\\n",
       " &= ue^{t/\\tau} + c \\\\\n",
       "x &= u + ce^{-t/\\tau} \\\\\n",
       "\\end{align}\n",
