--- a/neuron/adaptive_LIF_neuron.ipynb
+++ b/neuron/adaptive_LIF_neuron.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:e3c746321bbfe1d498108de6979025af32e097060e61741fa2b5b6afb9617570"
+  "signature": "sha256:fd5c8e7256cbb5f911468f2e4dbe5e0b35badffd07c543fb77c197577533886e"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -41,6 +41,14 @@
      "source": [
       " - You should set your feedback time constant like so...\n",
       " - You should set your feedback strength like so..."
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 1,
+     "metadata": {},
+     "source": [
+      "Simulation setup and model definitions"
      ]
     },
     {
@@ -303,7 +311,7 @@
       "\\dot{x} + \\frac{1}{\\tau}x &= \\frac{1}{\\tau}u \\\\\n",
       "\\end{align}\n",
       "\n",
-      "In contrast to the LIF case, $u$ is now time varying because of adaptation. That is, $u(t)=u_{in}-u_f(t)$, where $u_f(t)=ke^{-t/\\tau_f}$. $k$ is the amplitude of the feedback scaled by $\\alpha$ after the refractory period ends. Note that $k$ is not really a free parameter but rather depends on the firing rate of the neuron. However, we will assume that $k$ is a free parameter for now. Continuing, set integrating factor \n",
+      "In contrast to the LIF case, $u$ is now time varying because of adaptation. That is, $u(t)=u_{in}-u_f(t)$, where $u_f(t)=ke^{-t/\\tau_f}$. $k$ is the amplitude of the feedback scaled by $\\alpha$ after the refractory period ends. Note that $k$ is not really a free parameter but rather depends on the firing rate of the neuron. That is, $k=k(f, \\alpha, t_{ref})$ in reality. However, we will assume that $k$ is a free parameter for now. Continuing, set integrating factor \n",
       "\n",
       "\\begin{align}\n",
       "\\gamma(t) &= e^{\\int \\frac{1}{\\tau}dt} \\\\\n",
@@ -364,21 +372,50 @@
       "\n",
       "$$x_t = u_{in}(1-e^{-t_{spk}/\\tau})+\\frac{k\\tau_f}{\\tau-\\tau_f}\\left(e^{-t_{spk}/\\tau_f}-e^{-t_{spk}/\\tau}\\right)$$\n",
       "\n",
-      "However, as far as I know, there is no way to solve this equation for $t_{spk}$ because the exponentials have different time constants."
+      "There is no way to algebraically solve this equation for $t_{spk}$ in general. To show this, we first express $\\tau_f$ as a scaling of $\\tau$ with $\\tau_f = \\tau/\\beta$ for some $\\beta>0$. Substituting,\n",
+      "\n",
+      "\\begin{align}\n",
+      "x_t &= u_{in}(1-e^{-t_{spk}/\\tau})+\\frac{k\\tau/\\beta}{\\tau-\\tau/\\beta}\n",
+      "    \\left(e^{-\\beta t_{spk}/\\tau}-e^{-t_{spk}/\\tau}\\right) \\\\\n",
+      " &= u_{in}(1-e^{-t_{spk}/\\tau})+\\frac{k}{\\beta-1}\\left(e^{-\\beta t_{spk}/\\tau}-e^{-t_{spk}/\\tau}\\right) \\\\\n",
+      "\\end{align}\n",
+      "\n",
+      "Letting $y=e^{-t_{spk}/\\tau}$,\n",
+      "\n",
+      "\\begin{align}\n",
+      "x_t &= u_{in}(1-y)+\\frac{k}{\\beta-1}(y^\\beta-y) \\\\\n",
+      " &= u_{in}-u_{in}y+\\frac{k}{\\beta-1}y^\\beta-\\frac{k}{\\beta-1}y \\\\\n",
+      "0 &= \\frac{k}{\\beta-1}y^\\beta - \\left(u_{in}+\\frac{k}{\\beta-1}\\right)y + (u_{in}-x_t) \\\\\n",
+      "\\end{align}\n",
+      "\n",
+      "which looks like a polynomial of degree $\\beta$. However the equation is only contained within the more general class of [exponential polynomials](http://math.stackexchange.com/questions/793109/polynomials-with-non-integer-exponents) because $\\beta$ could be any number greater than $0$. If we could somehow find the roots of the equation, then it would be a simple matter of back-substituting for $y$ and solving for $t_{spk}$. Even if we restricted ourselves to integer values of $\\beta$ so that the equation was a polynomial, we know from the [Abel-Ruffini theorem](https://en.wikipedia.org/wiki/Abel%E2%80%93Ruffini_theorem) that there exist values for $\\beta$, namely $\\beta\\ge5$, for which there is no algebraic solution to the polynomial. Note that this is not to say that we could never find a solution. We could probably find solutions for specific values of $\\beta$ like $2$."
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Can we make progress if we assume that the adaptive time constant matches the soma time constant?\n",
+      "For example, what if we match the adaptive time constant to soma time constant so that $\\beta=1$?\n",
       "\n",
       "\\begin{align}\n",
-      "x_t &= u_{in}(1-e^{-t_{spk}/\\tau})+\\frac{k\\tau_f}{\\tau-\\tau_f}\\left(e^{-t_{spk}/\\tau_f}-e^{-t_{spk}/\\tau}\\right) \\\\\n",
-      " &= u_{in}(1-e^{-t_{spk}/\\tau})+\\frac{k\\tau}{\\tau-\\tau}\\left(e^{-t_{spk}/\\tau}-e^{-t_{spk}/\\tau}\\right) \\\\\n",
+      "0 &= \\frac{k}{1-1}y - \\left(u_{in}+\\frac{k}{1-1}\\right)y + (u_{in}-x_t) \\\\\n",
+      " &= \\left(\\frac{k}{1-1}-\\frac{k}{1-1}-u_{in}\\right)y + (u_{in}-x_t) \\\\\n",
       "\\end{align}\n",
       "\n",
-      "This looks just as problematic because $\\tau-\\tau=0$ divides $e^{-t_{spk}/tau}-e^{-t_{spk}/tau}=0$. However, because both terms go to $0$, we can try using L'Hopital's rule to find their limit."
+      "The $1-1$ in the denominators look problematic, but we can make progress by returning to the original formuation before substituting $y$. That is,"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "\\begin{align}\n",
+      "x_t &= u_{in}(1-e^{-t_{spk}/\\tau})+\\frac{k\\tau_f}{\\tau-\\tau_f}\\left(e^{-t_{spk}/\\tau_f}-e^{-t_{spk}/\\tau}\\right) \\\\\n",
+      " &= u_{in}(1-e^{-t_{spk}/\\tau})+\\frac{k\\tau}{\\tau-\\tau}\\left(e^{-t_{spk}/\\tau}-e^{-t_{spk}/\\tau}\\right) \n",
+      " & \\tau_f=\\tau \\\\\n",
+      "\\end{align}\n",
+      "\n",
+      "This again looks problematic because $\\tau-\\tau=0$ divides $e^{-t_{spk}/tau}-e^{-t_{spk}/tau}=0$. However, because both terms go to $0$, we can use L'Hopital's rule to find their limit."
      ]
     },
     {
@@ -407,7 +444,15 @@
       "\n",
       "\\begin{align}\n",
       "x_t &= u_{in}(1-e^{-t_{spk}/\\tau})-\\frac{k}{\\tau}t_{spk}e^{-t_{spk}/\\tau} \\\\\n",
-      "\\end{align}\n"
+      "\\end{align}\n",
+      "\n",
+      "we find ourselves stymied in our quest for an analytical solution for $t_{spk}$. Mathematica says the solution is \n",
+      "\n",
+      "$$t_{spk}=-\\frac{u_{in}}{k}-\\tau W\\left(-\\frac{e^{-u/(k\\tau)}(u_{in}-x_t)}{k\\tau}\\right)$$\n",
+      "\n",
+      "where $W(\\cdot)$ is the [product logarithm](http://reference.wolfram.com/language/ref/ProductLog.html) (a.k.a. [Lambert W function](https://en.wikipedia.org/wiki/Lambert_W_function)), but I don't know how it found the solution. At this point, perhaps it's time we just solve the equation numerically. \n",
+      "\n",
+      "First though, let's check that the theoretical differential equation solution matches the simulation"
      ]
     },
     {
@@ -510,11 +555,31 @@
      "prompt_number": 7
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "We see that the simulation result lines up on top of the theoretical differential equation, so we'll proceed with finding the solution numerically. Returning to our assumption that $k$ is a free parameter. \n",
+      "\n",
+      "\\begin{align}\n",
+      "k &= k(f, \\alpha, t_{ref}) \\\\\n",
+      " &= \\alpha e^{-t_{ref}/\\tau_f}\\frac{1}{\\tau(1-e^{-1/\\lambda\\tau})} \\\\\n",
+      "\\end{align}"
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 1,
+     "metadata": {},
+     "source": [
+      "Appendix"
+     ]
+    },
+    {
      "cell_type": "heading",
      "level": 2,
      "metadata": {},
      "source": [
-      "Using the LIF firing rate equation"
+      "Steady state firing rate - mean value approximation"
      ]
     },
     {
@@ -908,14 +973,6 @@
      "source": [
       "TODO:\n",
       " - How does adaptation change the phase plots? Should just change the slope of $u_f=\\alpha_f f$."
-     ]
-    },
-    {
-     "cell_type": "heading",
-     "level": 1,
-     "metadata": {},
-     "source": [
-      "Appendix"
      ]
     },
     {
