blurb on nef implementation of lpf

--- a/theory/NEF_dynamics_adaptation.ipynb
+++ b/theory/NEF_dynamics_adaptation.ipynb
@@ -37,26 +37,27 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "For dynamical system\n",
+      "For the linear dynamical system\n",
       "\n",
       "$$\\dot{x}=Ax+Bu$$\n",
       "\n",
-      "$A$ governs the stability and speed of the system. For stability (only considering 1D for now...), $A<0$. To make a stable system faster, make $|A|$ bigger.\n",
-      "\n",
-      "The steady state value is\n",
-      "\n",
-      "$$x=-A^{-1}Bu$$\n",
-      "\n",
-      "so to make the system settle at $u$, set \n",
-      "\n",
-      "$$B=-A$$\n",
-      "\n",
-      "To implement the system with NEF, use neurally plausible transformations \n",
+      "and synaptic time constant $\\tau$, NEF implements the system using neurally plausible transformations \n",
       "\n",
       "\\begin{align}\n",
       "A' &= \\tau A+I \\\\\n",
       "B' &= \\tau B \\\\\n",
-      "\\end{align}\n"
+      "\\end{align}\n",
+      "\n",
+      "To implement the first order system\n",
+      "\n",
+      "$$\\tau_{sys}\\dot{x}=-x+u$$\n",
+      "\n",
+      "use\n",
+      "\n",
+      "\\begin{align}\n",
+      "A' &= -\\frac{\\tau}{\\tau_{sys}} + I \\\\\n",
+      "B' &= \\frac{\\tau}{\\tau_{sys}} \\\\\n",
+      "\\end{align}"
      ]
     },
     {
@@ -75,7 +76,18 @@
       "\n",
       "$$\\dot{x}=Ax+Bu$$\n",
       "\n",
-      "or in the complex frequency domain,\n",
+      "$A$ governs the stability and speed of the system. For stability (only considering 1D for now...), $A<0$. To make a stable system faster, make $|A|$ bigger.\n",
+      "\n",
+      "The steady state value is\n",
+      "\n",
+      "$$x=-A^{-1}Bu$$\n",
+      "\n",
+      "so to make the system settle at $u$, set \n",
+      "\n",
+      "$$B=-A$$\n",
+      "\n",
+      "\n",
+      "In the complex frequency domain,\n",
       "\n",
       "$$sX(s) = AX(s)+BU(s)$$\n",
       "\n",
@@ -96,13 +108,9 @@
       "\\tau sX(s) + X(s) &= AX(s)+BU(s) \\\\\n",
       "\\tau sX(S) &= (A-I)X(s) + BU(s) \\\\\n",
       "sX(s) &= \\frac{A-I}{\\tau}X(s) + \\frac{B}{\\tau}U(s) \\\\\n",
-      "\\end{align}\n"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
+      "\\end{align}\n",
+      "\n",
+      "\n",
       "To match the neurally plausible dynamical system to the specified dynamical system, we set\n",
       "\n",
       "\\begin{align}\n",
@@ -115,6 +123,42 @@
       "\\begin{align}\n",
       "\\frac{B'}{\\tau} &= B \\\\\n",
       "B' = \\tau B \\\\\n",
+      "\\end{align}"
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 1,
+     "metadata": {},
+     "source": [
+      "Setting the speed of a system"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "To control the speed of an NEF network, we formulate the network as the dynamical system\n",
+      "\n",
+      "\\begin{align}\n",
+      "\\tau_{sys}\\dot{x} &= -x + u \\\\\n",
+      "\\dot{x} &= -\\frac{1}{\\tau_{sys}}x+\\frac{1}{\\tau_{sys}}u \\\\\n",
+      "\\end{align}\n",
+      "\n",
+      "That is, we want the system to respond to its input with speed $1/\\tau_{sys}$, which is independent of the synaptic time constant $\\tau$.\n",
+      "\n",
+      "For this system\n",
+      "\n",
+      "\\begin{align}\n",
+      "A &= -\\frac{1}{\\tau_{sys}} \\\\\n",
+      "B &= \\frac{1}{\\tau_{sys}} \\\\\n",
+      "\\end{align}\n",
+      "\n",
+      "so\n",
+      "\n",
+      "\\begin{align}\n",
+      "A' &= -\\frac{\\tau}{\\tau_{sys}} + I \\\\\n",
+      "B' &= \\frac{\\tau}{\\tau_{sys}} \\\\\n",
       "\\end{align}"
      ]
     },
