--- a/theory/lowpass_filter.ipynb
+++ b/theory/lowpass_filter.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:0a0ef1dadb2af8230f5ee3ecae234724e954c3eb4e52921b0382188133cf4f42"
+  "signature": "sha256:68d7272a5e732d7aee54f3b941ce6e106901b57fa5c40f89316bbc698f4c62c5"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -76,6 +76,13 @@
       "X(\\omega) &= \\frac{1}{1+j\\tau\\omega} U(\\omega) \\\\\n",
       "\\end{align}\n",
       "\n",
+      "In this form, we can see the effect of the low-pass filter on sin waves of different frequencies. We will see that the low-pass filter will attenuate and phase shift a sin wave."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
       "Let input $u$ be a sin wave of frequency $f$ so that $u(t) = \\sin(2\\pi ft) = \\sin(\\omega_0t)$ where $\\omega_0=2\\pi f$. Therefore,\n",
       "\n",
       "$$U(\\omega) = \\frac{\\pi}{j}[\\delta(\\omega-\\omega_0)-\\delta(\\omega+\\omega_0)]$$\n",
