dynamics tau mismatch, k tau

--- a/theory/NEF_dynamics_tau_mismatch.ipynb
+++ b/theory/NEF_dynamics_tau_mismatch.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:90a012f3a44694017fe1a3c32b073fdb8f52ee29a5fd4b785b80202ea6c89298"
+  "signature": "sha256:4a7d03208ad6fdbe6423236180bcfb4279d971a783548c88217cc2ff97d753c5"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -69,14 +69,14 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "The the linear dynamical system will be governed by\n",
+      "The the linear dynamical system is governed by\n",
       "\n",
       "\\begin{align}\n",
       "\\dot{x}(t) &= Ax(t)+Bu(t) \\\\\n",
       "sX(s) &= AX(s) + BU(s) \\\\\n",
       "\\end{align}\n",
       "\n",
-      "The neural system will be governed by\n",
+      "The neural system is governed by\n",
       "\n",
       "\\begin{align}\n",
       "x(t) &= h(t)*[A'x(t)+B'u(t)] \\\\\n",
@@ -92,7 +92,7 @@
       "sX(s) &= \\frac{1}{\\tau}(A'-1)X(s)+\\frac{1}{\\tau}B'U(s)] \\\\\n",
       "\\end{align}\n",
       "\n",
-      "To make the neural system implement the linear system, we compare the rearranged neural equations with the linear system equations and set\n",
+      "To make the neural system implement the linear system, we compare the rearranged neural system equation with the linear system equation and set\n",
       "\n",
       "\\begin{align}\n",
       "\\frac{1}{\\tau}(A'-1) &= A  \\\\\n",
@@ -113,7 +113,94 @@
      "level": 1,
      "metadata": {},
      "source": [
-      "Analysis"
+      "A neural system with mismatched $\\tau$ implements higher order dynamics "
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "First, we'll consider the case where there are two different time constants governing the neural system. Then we'll generalize to arbitrary number of different time constants.\n",
+      "\n",
+      "In the case of two time constants, $\\tau_1$ and $\\tau_2$, we have the neural system\n",
+      "\n",
+      "![neural system with two different time constants](figures/neural_system_2tau.png \"neural system with two different time constants\")\n",
+      "\n",
+      "where \n",
+      "\n",
+      "\\begin{align}\n",
+      "h_1(t) &= \\frac{1}{\\tau_1}e^{-t/\\tau_1}s(t) \\\\\n",
+      "h_2(t) &= \\frac{1}{\\tau_2}e^{-t/\\tau_2}s(t) \\\\\n",
+      "\\end{align}\n",
+      "\n",
+      "differ only in their time constants. I introduce the $\\frac{1}{2}$ scaling factors just to simplify the math, and they are immeterial to the overall analysis.\n",
+      "\n",
+      "Your population of neurons would have these dynamics if their synaptic time constants were drawn equally from $\\tau_1$ or $\\tau_2$ and the neurons all contributed equally to the decoding of $x(t)$."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "This system will be governed by\n",
+      "\n",
+      "\\begin{align}\n",
+      "x(t) &= \\frac{1}{2}h_1(t)*[A'x(t)+B'u(t)] + \\frac{1}{2}h_2(t)*[A'x(t)+B'u(t)] \\\\\n",
+      " &= \\frac{1}{2}[h_1(t)+h_2(t)]*[A'x(t)+B'u(t)] \\\\\n",
+      "X(s) &= \\frac{1}{2}[H_1(s)+H_2(s)][A'X(s)+B'U(s)] \\\\\n",
+      "\\end{align}"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Substituting,\n",
+      "\n",
+      "\\begin{align}\n",
+      "X(s) &= \\frac{1}{2}\\left(\\frac{1}{\\tau_1s+1}+\\frac{1}{\\tau_2s+1}\\right)[A'X(s)+B'U(s)] \\\\\n",
+      " &= \\frac{1}{2}\\left(\\frac{\\tau_1s+1+\\tau_2s+1}{(\\tau_1s+1)(\\tau_2s+1)}\\right)[A'X(s)+B'U(s)] \\\\\n",
+      "\\end{align}\n",
+      "\n",
+      "As a crosscheck, we can see that if $\\tau_1=\\tau_2$, this system reduces to the original neural system.\n",
+      "\n",
+      "\\begin{align}\n",
+      "X(s) &= \\frac{1}{2}\\left(\\frac{\\tau s+1+\\tau s+1}{(\\tau s+1)(\\tau s+1)}\\right)[A'X(s)+B'U(s)] & \\tau_1=\\tau_2=\\tau \\\\\n",
+      " &= \\frac{1}{2}\\left(\\frac{2(\\tau s+1)}{(\\tau s+1)(\\tau s+1)}\\right)[A'X(s)+B'U(s)] \\\\\n",
+      " &= \\frac{1}{\\tau s+1}[A'X(s)+B'U(s)] \\\\\n",
+      "\\end{align}\n",
+      "\n",
+      "which is the original neural system.\n",
+      "\n",
+      "Returning to the case when $\\tau_1\\neq\\tau_2$\n",
+      "\n",
+      "\\begin{align}\n",
+      "X(s) &= \\frac{1}{2}\\left(\\frac{(\\tau_1+\\tau_2)s+2}{\\tau_1\\tau_2s^2+(\\tau_1+\\tau_2)s+1}\\right)[A'X(s)+B'U(s)] \\\\\n",
+      "\\end{align}\n",
+      "\n",
+      "we can see that this will never exactly match the original neural system because of the $\\tau_1\\tau_2s^2$ term."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "As an aside: what if $\\tau_1$ and $\\tau_2$ are small so that $\\tau_1\\tau_2\\approx0$?\n",
+      "\n",
+      "\\begin{align}\n",
+      "X(s) &= \\frac{1}{2}\\left(\\frac{(\\tau_1+\\tau_2)s+2}{(\\tau_1+\\tau_2)s+1}\\right)[A'X(s)+B'U(s)] \\\\\n",
+      "\\end{align}\n",
+      "\n",
+      "interesting...the system dynamic terms are on the same order and almost cancel each other out. hmmm...maybe there's something here...but do this sometime later..."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "In the more general case, where there are $k$ different time constants, we have\n",
+      "\n",
+      "![neural system with k time constants](figures/neural_system_ktau.png \"neural system with two different time constants\")"
      ]
     },
     {
