--- a/theory/NEF_dynamics_tau_mismatch.ipynb
+++ b/theory/NEF_dynamics_tau_mismatch.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:4a7d03208ad6fdbe6423236180bcfb4279d971a783548c88217cc2ff97d753c5"
+  "signature": "sha256:d2ce91afa7a59dc02f9983190a767861bf061067c2ba20e35d97930377ce45c9"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -39,7 +39,7 @@
      "source": [
       "As far as I know, there is no systematic way to compensate for mismatch in the synaptic time constants, so your best bet is to just try it and pray. \n",
       "\n",
-      "How much mismatch can be tolerated is another parameter that you'll just have to try and see."
+      "How much mismatch can be tolerated is another parameter that you'll just have to try and see until better methods are developed."
      ]
     },
     {
@@ -185,19 +185,6 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "As an aside: what if $\\tau_1$ and $\\tau_2$ are small so that $\\tau_1\\tau_2\\approx0$?\n",
-      "\n",
-      "\\begin{align}\n",
-      "X(s) &= \\frac{1}{2}\\left(\\frac{(\\tau_1+\\tau_2)s+2}{(\\tau_1+\\tau_2)s+1}\\right)[A'X(s)+B'U(s)] \\\\\n",
-      "\\end{align}\n",
-      "\n",
-      "interesting...the system dynamic terms are on the same order and almost cancel each other out. hmmm...maybe there's something here...but do this sometime later..."
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
       "In the more general case, where there are $k$ different time constants, we have\n",
       "\n",
       "![neural system with k time constants](figures/neural_system_ktau.png \"neural system with two different time constants\")"
@@ -207,50 +194,46 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "$x(t)$ is decoded from the activities of a population of neurons. \n",
+      "Here,\n",
       "\n",
       "\\begin{align}\n",
-      "x(t) &= \\sum_id_ia_i(t) \\\\\n",
-      " &= \\mathbf{d}^T\\mathbf{a}(t) \\\\\n",
+      "X(s) &= \\sum_{i=1}^kd_iH_i(s)[A'X(s)+B'U(s)] \\\\\n",
       "\\end{align}\n",
       "\n",
-      "where $a_i(t)$ and $d_i$ are the firing rate and decoding weight of the $i$th neuron, respectively. \n",
+      "where $d_i$ have taken the role of the $\\frac{1}{2}$ factors in the previous, two time constant neural system. Your neuron population maps to this system when you group your neurons by their synaptic time constant and have $k$ different synaptic time constants. The $d_i$ were named so exactly because they take on the same role as the decoders.\n",
       "\n",
-      "$a_i(t)$ is a filtered version of the spikes output by neuron $i$, so \n",
+      "To see what kind of system this implements, \n",
       "\n",
       "\\begin{align}\n",
-      "a_i(t) &= h(t)*\\sum_j\\delta_i(t-t_j) \\\\\n",
-      " &= \\sum_jh(t)*\\delta_i(t-t_j) \\\\\n",
-      " &= \\sum_jh(t-t_j) \\\\\n",
+      "X(s) &= \\sum_{i=1}^kd_iH_i(s)[A'X(s)+B'U(s)] \\\\\n",
+      " &= \\left(\\frac{d_1}{\\tau_1s+1}+\\frac{d_2}{\\tau_2s+1}+\\cdots+\\frac{d_k}{\\tau_ks+1}\\right)[A'X(s)+B'U(s)] \\\\\n",
+      " &= \\left(\\frac{\\sum_{i=1}^kd_i\\Pi_{j=1,j\\neq i}^k\\tau_js+1}{\\Pi_{i=1}^k(\\tau_is+1)}\\right)[A'X(s)+B'U(s)] \\\\\n",
       "\\end{align}\n",
       "\n",
-      "Where $\\delta_i$ are the spikes emitted by neuron $i$. The rate at which the neuron emits spikes is a nonlinear function of the current state and the input. That is, $a_i(t)=a_i(Ax(t)+Bu(t))$. "
+      "which is really ugly and says that this is mathematically a $k$th order system. \n",
+      "\n",
+      "More work can be done here on what we can do to make this system behave like a first order system..."
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 1,
+     "metadata": {},
+     "source": [
+      "Appendix"
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Therefore,\n",
+      "In the two time constant cast, what if $\\tau_1$ and $\\tau_2$ are small so that $\\tau_1\\tau_2\\approx0$?\n",
       "\n",
       "\\begin{align}\n",
-      "x(t) &= \\sum_id_ih(t)*\\sum_j\\delta_i(t-t_j) \\\\\n",
-      " &= h(t)*\\sum_i\\sum_jd_i\\delta_i(t-t_j) \\\\\n",
+      "X(s) &= \\frac{1}{2}\\left(\\frac{(\\tau_1+\\tau_2)s+2}{(\\tau_1+\\tau_2)s+1}\\right)[A'X(s)+B'U(s)] \\\\\n",
       "\\end{align}\n",
       "\n",
-      "Here, we can see that the impulse response can be factored out of the equation.\n",
-      "\n",
-      "In reality, neurons may have different synaptic time constants, so \n",
-      "\n",
-      "\\begin{align}\n",
-      "a_i(t) &= h_i(t)*\\sum_j\\delta_i(t-t_j) \\\\\n",
-      "\\end{align}\n",
-      "\n",
-      "where $h_i(t)=\\frac{1}{\\tau_i}e^{-t/\\tau_i}s(t)$. In this case, \n",
-      "\n",
-      "\\begin{align}\n",
-      "x(t) &= \\sum_ih_i(t)*\\sum_jd_i\\delta_i(t-t_j) \\\\\n",
-      "\\end{align}"
+      "interesting...the system dynamic terms are on the same order and almost cancel each other out. hmmm...maybe there's something here...but do this sometime later..."
      ]
     }
    ],
